fix line-breaks in buttons and chips

--- a/tlm-stencil/src/components/mw-chip/mw-chip.css
+++ b/tlm-stencil/src/components/mw-chip/mw-chip.css
@@ -5,6 +5,8 @@
 .chip {
   cursor: default;
   display: flex;
+  white-space: nowrap;
+  overflow: hidden;
   align-items: center;
   justify-content: center;
   width: fit-content;
